Closed Bug 1146034 Opened 10 years ago Closed 10 years ago

Lighting and Specular Highlight not rendered with ANGLE D3D11

Categories

(Core :: Graphics, defect)

39 Branch
x86_64
Windows 7
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla39
Tracking Status
firefox36 --- unaffected
firefox37 + wontfix
firefox38 + fixed
firefox39 + fixed

People

(Reporter: lukebenes, Assigned: jrmuizel)

References

Details

(Whiteboard: [gfx-noted])

Attachments

(1 file)

User Agent: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:39.0) Gecko/20100101 Firefox/39.0 Build ID: 20150320030211 Steps to reproduce: What steps will reproduce the problem? 1. Firefox on Windows PC go to http://esenthel.com/?id=live_demo 2. In Firefox with about:config webgl.angle.try-d3d11 = FALSE, go to http://esenthel.com/?id=live_demo 3. Compare What is the expected output? What do you see instead? Note the Specular Highlights are missing in newer versions of Chrome/Firefox. This does not affect Firefox with dx9 ANGLE or ANGLE disabled. What version of the product are you using? On what operating system? Chrome Version 42.0.2291.0 canary (64-bit) Firefox Nightly 38.0a1 (2015-01-29) Windows 7 Expected results: D3D9 and D3D11 should render the same way. Chrome also suffered from this exact same issue, but it was fixed in Chrome over a month ago. https://code.google.com/p/angleproject/issues/detail?id=902
Summary: Specular Highlight not rendered with ANGLE D3D11 → Lighting and Specular Highlight not rendered with ANGLE D3D11
[Tracking Requested - why for this release]: This is a WebGL content regression caused by bug 1079398
It would be great if you could figure out which ANGLE update that chrome did that fixed the problem. That will help us find the actual commit that fixed it. http://www.chromium.org/developers/bisect-builds-py may be of some help.
Flags: needinfo?(lukebenes)
Thanks, I was not aware of bisect-builds-py. It's not as polished as mozregression, but I was able to track it down to: You are probably looking for a change made after 316628 (known good), but no lat er than 316641 (first known bad). CHANGELOG URL: https://chromium.googlesource.com/chromium/src/+log/1d4a06266c0abc6be779f8acf5 0cb2f18c5c0d89..2d616c68a8fd923e378b6473302c1406f19aa8cb Looks like the fix occurred in this commit-> ANGLE 592ab9dd91e6..d2d21dcadcc
Flags: needinfo?(lukebenes)
Thanks. That should help. Can you post the source of the shader that isn't working properly?
Flags: needinfo?(lukebenes)
Jeff - Unless you have a safe fix available today, we're too late in 37 to take a fix. This regression will need to be fixed in 38. Tracking regression.
Component: Untriaged → Graphics
Product: Firefox → Core
Flags: needinfo?(jmuizelaar)
Whiteboard: [gfx-noted]
We're now too late for 37. Marking 37 as wontfix.
Looks like this was fixed by ANGLE commit 2857f489f32372310014888342c6f9c97fac5995
Applying the patch fixes the problem but seems to cause crashes while running the tests: https://tbpl.mozilla.org/?tree=Try&rev=6b083f596d8e
I mismerged the patch. The correct one should be fine.
Assignee: nobody → jmuizelaar
Status: UNCONFIRMED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla39
If this fixes bug 1093037, we definitely want to uplift to 38.
(In reply to Milan Sreckovic [:milan] from comment #12) > If this fixes bug 1093037, we definitely want to uplift to 38. Although, the dates don't quite line up...
I don't expect this to fix 1093037
Flags: needinfo?(lukebenes)
Blocks: 1079398
Jeff, do you want to uplift this to beta(38)? Thanks
Flags: needinfo?(jmuizelaar)
Approval Request Comment [Feature/regressing bug #]: 1079398 [User impact if declined]: Broken WebGL content [Describe test coverage new/current, TreeHerder]: Not much test coverage for this specific problem, but has been on Nightly for a while without problem. The ANGLE code is tested/shipped by Chrome. Our WebGL test coverage is decent so I don't expect regressions [Risks and why]: Could break other WebGL content because of shader compiler changes, but this it not too likely
Flags: needinfo?(jmuizelaar)
Attachment #8589206 - Flags: approval-mozilla-beta?
Attachment #8589206 - Flags: approval-mozilla-aurora?
Comment on attachment 8589206 [details] [diff] [review] Cherry pick fix from ANGLE Aurora is already fixed. Taking it, it should be in 38 beta 3.
Attachment #8589206 - Flags: approval-mozilla-beta?
Attachment #8589206 - Flags: approval-mozilla-beta+
Attachment #8589206 - Flags: approval-mozilla-aurora?
Attachment #8589206 - Flags: approval-mozilla-aurora-
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: