Bug 1146034 - Cherry pick "Fix struct uniform packing." a=sledru

This comes from ANGLE commit 2857f489f32372310014888342c6f9c97fac5995